[package]
name = "voxel-mesh"
version = "0.1.0"
authors = ["lyon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aabb = { git = "https://github.com/lyonbeckers/rs-aabb" }
crossbeam-channel = "0.5"
gdnative = { git = "https://github.com/lyonbeckers/godot-rust.git", rev = "e87fbfd" }
lazy_static = "1.4"
legion = "0.4"
nalgebra = "0.29"
octree = { git = "https://github.com/lyonbeckers/rs-octree" }
once_cell = "1.8"
parking_lot = "0.11"
rayon = "1.5"
tracing = "0.1"


